Changement dans la liste d'amis, selon que l'ami est connecté ou qu'on consulte la liste de quelqu'un d'autre que soi-même. Les boutons pour modifier la catchphrase et la bio ne s'affichent que pour le profil connecté et modifient l'affichage correctement. L'annulation des modifications fonctionne correctement aussi

--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,7 @@ Regex à l'inscription et à la connection pour ajouter des '_' à la place des 
 > Le nom indiqué par l'utilisateur reste utilisable par lui et sera conservé en tant que valeur 'pseudo'
 > Le même nom, modifié si nécessaire par la regex, sera utilisé comme valeur 'name' pour retrouver les infos du profil
 
-Créer un pop up pour mes boutons 'Modify' du profil
-N'afficher lesdits boutons que si le profil est celui du joueur connecté
+Créer un pop up pour les boutons 'Modify' du profil
 
 Ajouter les valeurs pseudo dans le leaderboard
 
