--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,13 @@
 Regex à l'inscription et à la connection pour ajouter des '_' à la place des éventuels ' ' ou '.'
 > Le nom indiqué par l'utilisateur reste utilisable par lui et sera conservé en tant que valeur 'pseudo'
-> Le même nom, modifié si nécessaire par la regex, sera utilisé comme valeur 'name' pour retrouver les infos du profil
+> Le même nom, modifié si nécessaire par la regex, sera utilisé comme valeur 'name' pour retrouver les différents appels de fonction (message privé, challenge, affichage du profil...)
 
 Terminer toutes les variantes HTML de la page 'Play'
 
-Régler l'affichage du menu dans la friendList (z-index par rapport au bord de la liste)
+Un pop up pour modifier l'avatar
+
+Mettre en place le système ELO
+
+Mettre en place le système de tournoi
+
+Changer la police d'écriture du site
