Nouvelles notes dans todo. Listes plus larges sur la page 'Play'(online)

--- a/todo.txt
+++ b/todo.txt
@@ -6,4 +6,8 @@ Mettre en place le système ELO
 
 Mettre en place le système de tournoi
 
+Réfléchir à comment afficher les joueurs mute (et permettre de les unmute)
+
 Option : Changer la police d'écriture du site (faire des tests)
+
+Se décider sur le design de la page 'Play'(online) > Tout centrer? Allonger les listes? Les réduire?
