--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 Terminer toutes les variantes HTML de la page 'Play'
 
+Faire fonctionner les options de la page Settings
+
 Mettre en place le système ELO
 
 Mettre en place le système de tournoi
@@ -16,3 +18,5 @@ Option : Changer la police d'écriture du site (faire des tests)
 Se décider sur le design de la page 'Play'(online) > Tout centrer? Allonger les listes? Les réduire?
 
 Rendre le chat accessible sur petit écran (cutomWindow dédiée)
+
+Revoir et améliorer la responsiveness
